<resources>
    <string name="app_name">MadridShops</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_getting_all_shops">Error getting all shops</string>
    <string name="shop_name">Shop\'s name</string>
    <string name="shop_description">Shop\'s description</string>
    <string name="shop_openning_hours">Shop\'s openning hours</string>
    <string name="shop_image_description">Shop\'s image description</string>
    <string name="shop_s_logo">Shop\'s logo</string>
    <string name="shop_s_name">Shop\'s name</string>
    <string name="shops_s_address">Shop\'s address</string>
    <string name="shop_image_map">Shop\'s image map</string>
    <string name="show_hide_map">Show / hide map</string>
    <string name="shops">Shops</string>
    <string name="activities">Activities</string>
    <string name="logo_s_app">Logo\'s App</string>
    <string name="swipe_or_tap_to_refresh_data">Swipe Screen or Tap here to refresh data</string>
    <string name="image_test">Image test</string>
</resources>
