<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.tho.madridshops.adapter.ListAdapter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cardview_small_margin"
    app:cardCornerRadius="@dimen/cardview_corner_radius"
    app:cardElevation="@dimen/cardview_card_elevation" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/list_margin">

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingBottom="@dimen/list_image_padding"
            android:paddingEnd="@dimen/list_image_padding"
            android:paddingStart="@dimen/list_image_padding"
            android:paddingTop="@dimen/list_image_padding"
            android:contentDescription="@string/shop_s_logo"
            android:background="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_report_image" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.20" />

        <TextView
            android:id="@+id/list_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/list_text_margin"
            android:layout_marginStart="@dimen/list_text_margin"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/list_image"
            android:textSize="@dimen/list_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/shop_s_name" />

        <TextView
            android:id="@+id/list_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_name"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/list_text_margin"
            android:layout_toEndOf="@id/list_image"
            android:textSize="@dimen/list_text_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/list_image"
            app:layout_constraintEnd_toEndOf="@+id/list_name"
            app:layout_constraintStart_toStartOf="@+id/list_name"
            app:layout_constraintTop_toBottomOf="@+id/list_name"
            tools:text="@string/shops_s_address" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
